--- a/source/404.md
+++ b/source/404.md
@@ -1,9 +1,10 @@
 ---
 layout: page
-title: 404 Page Not Found
+title: 404 - Page Not Found
 comments: false
 ---
 
 # 404: Page Not Found
 
 404: Page Not Found
+<iframe src="https://giphy.com/embed/26xBIygOcC3bAWg3S" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/loop-26xBIygOcC3bAWg3S">via GIPHY</a></p>
