--- a/source/404.md
+++ b/source/404.md
@@ -6,4 +6,4 @@ comments: false
 
 # 404: Page Not Found
 
-<iframe src="https://giphy.com/embed/26xBIygOcC3bAWg3S" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/loop-26xBIygOcC3bAWg3S">via GIPHY</a></p>
+<img src="https://mathigatti.com/2019/12/29/style-transfer-experiments/s2_1.jpg" width="100%">
